# blake3

./: .gitignore  README.md  mix.exs
config/: config.exs  test.exs
lib/blake3/: native.ex
native/blake3_ex/: Cargo.toml
